# pandoc-embedz

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_ANALYSIS.md  COMMON.yml  COMPARISON.md  DATASOURCES_PROPOSAL.md  GLOBAL_EXPRESSION_PROPOSAL.md  LICENSE  MANIFEST.in  MULTI_TABLE.md  Makefile  README.JA.md  README.md  log.failed  package-lock.json  pyproject.toml  test_jvn_shared_template.md  test_jvn_use_case.md
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
examples/: Makefile  indent_control.md  macros.md  sample_data.csv  simple.md  template_inclusion.md  variables.md
pandoc_embedz/: __init__.py  config.py  data_loader.py  filter.py  main.py  standalone.py
scripts/: release_full.sh  release_tag.sh
tests/: __init__.py  test_attributes.py  test_load_data.py  test_parse.py  test_standalone.py  test_template.py  test_variables.py
tests/fixtures/: cli_template.tex  config.yaml  embedz_config.yaml  embedz_override.yaml  products.csv  sales.csv  sample.csv  sample.db  sample.json  sample.toml  sample.tsv  sample.txt  sample.yaml
