[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandoc-embedz"
version = "0.3.0"
description = "Pandoc filter for embedding data-driven content using Jinja2 templates"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kazumasa Utashiro"}
]
keywords = ["pandoc", "filter", "jinja2", "data", "template", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "panflute>=2.0.0",
    "jinja2>=3.0.0",
    "pandas>=1.0.0",
    "pyyaml>=5.0.0",
    "tomli>=1.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tecolicom/pandoc-embedz"
Documentation = "https://github.com/tecolicom/pandoc-embedz#readme"
Repository = "https://github.com/tecolicom/pandoc-embedz"
Issues = "https://github.com/tecolicom/pandoc-embedz/issues"

[project.scripts]
pandoc-embedz = "pandoc_embedz.filter:main"

[tool.setuptools]
packages = ["pandoc_embedz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
